--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,11 @@ body {
 	overflow: hidden;
 }
 
+a:link, a:visited, a:active, a:hover {
+	text-decoration: none;
+	color: #f2f2f2;
+}
+
 div {
 	display: inline-block;
 	margin-right: 40px;
@@ -21,6 +26,7 @@ h1 {
 
 h2 {
 	margin: 0;
+	margin-top: 20px;
 }
 
 div.logo {
@@ -29,7 +35,7 @@ div.logo {
 	text-align: center;
 }
 
-div.logo > h1 {
+div.logo h1 {
 	color: #f2f2f2;
 	margin-left: 20px;
 	/*padding-top: 43vh;*/
@@ -40,6 +46,10 @@ div.upload, div.gallery {
 	font-family: 'Josefin Sans', sans-serif;
 	font-size: 1.2em;
 	/*padding: 3px;*/
+}
+
+div.phpupload {
+	width: 200px;
 }
 
 p.header {
@@ -55,10 +65,6 @@ p.subheader {
 	font-family: 'Josefin Sans', sans-serif;
 	font-size: 3em;
 	line-height: 2em;
-}
-
-a:active, a:visited, a:link {
-	color: #363636;
 }
 
 a:hover {
