--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,8 @@ div {
 h1 {
 	font-family: 'Raleway', sans-serif;
 	/*'Raleway', sans-serif;*/
-	font-size: 5em;
+	/*font-size: 5em;*/
+	font-size: 72px;
 	/*border: 3px solid #363636;*/
 	margin: 0 auto;
 }
@@ -44,12 +45,12 @@ div.logo h1 {
 
 div.upload, div.gallery {
 	font-family: 'Josefin Sans', sans-serif;
-	font-size: 1.2em;
+	font-size: 20px;
+	/*width: 250px;*/
+	width: 90px;
+	height: 60px;
+	overflow: hidden;
 	/*padding: 3px;*/
-}
-
-div.phpupload {
-	width: 200px;
 }
 
 p.header {
@@ -73,7 +74,7 @@ a:hover {
 }
 
 #container {
-	width: 473vw;
+	width: 500vw;
 	height: 99vh;
 	margin: 0 auto;
 	text-align: right;
@@ -96,7 +97,7 @@ hr {
 }
 
 section:nth-child(2) {
-	margin-left: 350px;
+	margin-left: 10vw;
 }
 
 section {
@@ -106,7 +107,8 @@ section {
 	display: inline-block;
 	text-align: right;
 	height: 105vh;
-	margin-right: 250px;
+	margin-right: 21vw;
+	font-size: 1.5vh;
 }
 
 section:nth-child(n+2) {
@@ -120,6 +122,10 @@ section:last-child {
 	margin-right: 0px;
 }
 
+/*section:first-child {
+	vertical-align: top;
+}*/
+
 .pur {
 	/*color: #FFEA3C;*/
 	background: #705682;
@@ -132,4 +138,26 @@ section:last-child {
 
 .yel {
 	color: #ffea3c;
+}
+
+input[type=submit] {
+	color: black;
+}
+
+.phpnotice {
+	text-decoration: underline;
+	font-size: 1.2em;
+	width: 100%;
+	background: #B81E2B;
+	position: fixed;
+	z-index: 999;
+}
+
+.phpsuccess {
+	text-decoration: underline;
+	font-size: 1.2em;
+	width: 100%;
+	background: #705682;
+	position: fixed;
+	z-index: 999;
 }
